# fin_report_extractor

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/app/: config.yml  container.py  main.py
src/app/api/: reports.py
src/core/fin_report_file_loaders/: models.py  services.py
src/core/fin_report_processors/: db_models.py  models.py  repository.py  services.py
src/infra/: database.py  llm_based_processor.py  sqlalchemy_repository.py  xlsx_reader.py
tests/: conftest.py
tests/app/: test_api.py
tests/core/: test_services.py
tests/infra/: test_llm_based_processor.py  test_sqlalchemy_repository.py  test_xlsx_reader.py
tests/test_data/: complicated_example.xlsx  simple_example.xlsx
