[project]
name = "fin_report_extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-community>=0.4",
    "unstructured[xlsx]>=0.18.15",
    "pydantic>=2.4",
    "dependency-injector>=4.48.2",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "pytest>=8.4.2",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "pytest-asyncio>=1.2.0",
    "pandas>=2.2",
    "python-multipart>=0.0.9",
    "fastapi[standard]>=0.119.0",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
extend-select = ["I"]
